# shipwreck

./: .gitignore  CLAUDE.md  PARSERS.md  README.md  justfile  pyproject.toml  shipwreck-spec.md
.claude/skills/shipwreck/: SKILL.md
.github/workflows/: ci.yml
examples/: shipwreck-examples.yaml  shipwreck-minimal.yaml  shipwreck.yaml
examples/ansible/playbooks/: site.yml
examples/ansible/roles/api/defaults/: main.yml
examples/ansible/roles/api/handlers/: main.yml
examples/ansible/roles/api/tasks/: main.yml
examples/ansible/roles/monitoring/defaults/: main.yml
examples/ansible/roles/monitoring/tasks/: main.yml
examples/ansible/tasks/: cache.yml  database.yml
examples/bake/: docker-bake.hcl
examples/compose/: .env  compose.yaml
examples/dockerfiles/: Dockerfile  Dockerfile.base  Dockerfile.worker
scripts/: generate_demo.py  take_screenshots.py
src/shipwreck/: __init__.py  cli.py  config.py  git.py  models.py  scanner.py
src/shipwreck/discovery/: gitlab.py
src/shipwreck/graph/: aliases.py  builder.py  classifier.py  criticality.py
src/shipwreck/output/: html.py  json_export.py  mermaid.py  snapshot.py
src/shipwreck/output/templates/: report.html.j2
src/shipwreck/parsers/: __init__.py  ansible.py  bake.py  base.py  compose.py  dockerfile.py  fallback.py  github_actions.py  gitlab_ci.py
src/shipwreck/query/: engine.py
src/shipwreck/registry/: client.py  policy.py  staleness.py  version.py
src/shipwreck/resolution/: ansible.py  bake.py  compose.py  env.py
tests/: conftest.py
tests/fixtures/ansible/handlers/: main.yml
tests/fixtures/ansible/playbooks/: site.yml
tests/fixtures/ansible/tasks/: deploy.yml  loop_literal.yml  main.yml
tests/fixtures/bake/: docker-bake.hcl  simple.hcl  unknown_variable.hcl  with_context_vars.hcl  with_contexts.hcl  with_group.hcl  with_inherits.hcl  with_variables.hcl
tests/fixtures/compose/: .env  compose.yaml  docker-compose.override.yaml  simple.yaml  with_build.yaml  with_env.yaml  with_profiles.yaml
tests/fixtures/dockerfiles/: commented.dockerfile  multistage.dockerfile  platform.dockerfile  simple.dockerfile  unknown_arg.dockerfile  with_args.dockerfile  with_registry.dockerfile
tests/fixtures/fallback/: Containerfile  Containerfile.dev  ignored.yaml  misc_config.yaml
tests/fixtures/gitlab_ci/: .gitlab-ci.yml  build.gitlab-ci.yml  services.yml
tests/integration/: test_cli.py  test_lookout.py  test_output.py  test_scanner.py
tests/unit/: test_config.py  test_discovery.py  test_html.py  test_html_enhanced.py  test_output.py  test_registry.py  test_snapshot_diff.py  test_version_schemes.py
tests/unit/test_graph/: test_aliases.py  test_builder.py  test_classifier.py  test_criticality.py
tests/unit/test_parsers/: test_ansible.py  test_bake.py  test_compose.py  test_dockerfile.py  test_fallback.py  test_github_actions.py  test_gitlab_ci.py
tests/unit/test_resolution/: test_ansible.py  test_bake.py  test_compose.py  test_env.py
(+9 files in other folders)
