[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipwreck"
version = "0.1.0"
description = "Mapping the buried treasure in your container stack."
readme = "README.md"
license = "MIT"
authors = [
    { name = "ozonejunkieau" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
keywords = ["docker", "containers", "dependency-graph", "devops", "infrastructure"]
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2",
    "jinja2>=3",
    "pyyaml>=6",
    "python-hcl2>=4",
    "httpx>=0.27",
    "semver>=3",
    "rich>=13",
]

[project.scripts]
shipwreck = "shipwreck.cli:app"

[project.optional-dependencies]
ansible = [
    "ansible-core>=2.16",
]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "respx>=0.21",
    "pytest-snapshot>=0.9",
    "ruff>=0.4",
    "basedpyright>=1.18",
    "pytest-cov>=5",
    "ansible-core>=2.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shipwreck"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["shipwreck"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.basedpyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
